# ASR

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  serious_gpu_12h.yaml  serious_gpu_12h_llm_openai_compatible.yaml
data/raw/custom_asr/: README.md  template.example.csv
docs/: DATASETS.md  LLM_CORRECTION.md  PUSH_TO_GITHUB.md  RUN_SERIOUS_GPU_12H.md
experiments/: README.md
reports/: experiment_report.md  team_results_report.html  team_results_report.md  team_results_summary.csv
scripts/: check_datasets.py  evaluate_model.py  llm_post_correct.py  make_common_voice_manifest.py  make_report.py  make_team_report.py  prepare_data.py  run_baseline.py  run_indic_baseline.py  train_whisper.py
src/asr_pipeline/: __init__.py  audio.py  config.py  data.py  evaluation.py  llm_correction.py  metrics.py  normalization.py  reporting.py  training.py  utils.py
tests/: test_metrics.py  test_normalization.py
