[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hindi-hinglish-whisper-asr"
version = "0.1.0"
description = "Reproducible Whisper fine-tuning and evaluation pipeline for Hindi and Hinglish ASR"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

